WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202646
Crash in WebKitTestRunnerApp: invocation function for block in WTR::UIScriptControllerIOS::sendEventStream
https://bugs.webkit.org/show_bug.cgi?id=202646
Summary
Crash in WebKitTestRunnerApp: invocation function for block in WTR::UIScriptC...
Antoine Quint
Reported
2019-10-07 12:25:34 PDT
Crash in WebKitTestRunnerApp: invocation function for block in WTR::UIScriptControllerIOS::sendEventStream
Attachments
Patch
(1.99 KB, patch)
2019-10-07 12:29 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-10-07 12:29:36 PDT
Created
attachment 380344
[details]
Patch
Antoine Quint
Comment 2
2019-10-07 12:29:41 PDT
<
rdar://problem/54576522
>
WebKit Commit Bot
Comment 3
2019-10-07 13:31:08 PDT
Comment on
attachment 380344
[details]
Patch Clearing flags on attachment: 380344 Committed
r250785
: <
https://trac.webkit.org/changeset/250785
>
WebKit Commit Bot
Comment 4
2019-10-07 13:31:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug