Crash in WebKitTestRunnerApp: invocation function for block in WTR::UIScriptControllerIOS::sendEventStream https://bugs.webkit.org/show_bug.cgi?id=202646 <rdar://problem/54576522>

Patch by Antoine Quint <graouts@apple.com> on 2019-10-07
Reviewed by Tim Horton.

* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptControllerIOS::sendEventStream):

Canonical link: https://commits.webkit.org/216114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250785 268f45cc-cd09-0410-ab3c-d52691b4dbfc